# Mult-YOLO-alogorithm-of-RoboMaster-Radar-Detection-2023

./: .gitignore  README.md
anchor_base/C++_inference_Openvino_radar/: CMakeLists.txt  README.md  demo_radar.cpp  yolov7_radar.cpp  yolov7_radar.h
anchor_base/C++_inference_TensorRT_radar/: CMakeLists.txt  README.md  demo_radar.cpp  yolov7_radar.cpp  yolov7_radar.cu  yolov7_radar.h
anchor_base/C++_inference_TensorRT_radar/Demo DaHeng Camera/: CMakeLists.txt
anchor_base/C++_inference_TensorRT_radar/Demo DaHeng Camera/include/: yolov7_radar.h
anchor_base/C++_inference_TensorRT_radar/Demo DaHeng Camera/src/: CamWrapper.cpp  DH_CAM.cpp  yolov7_radar.cpp  yolov7_radar.cu
anchor_base/yolo_anchorbase_radar/: README.md  detect.py  export.py  hubconf.py  test.py  train.py
anchor_base/yolo_anchorbase_radar/cfg/GMaster/: yolov7-4anchor-transCoT3-Full-HorNet-SimAM.yaml  yolov7_4-C2fHB-COT2f-SimAM.yaml  yolov7_4.yaml  yolov7_4_COT3-ConvNextV1-SimAM.yaml  yolov7_4_COT3-ConvNextV2-SimAM.yaml  yolov7_4_STD.yaml  yolov7_4_anchorfree.yaml  yolov7_anchorfree-transCoT3-Full-ConvNextV2-SimAM.yaml
anchor_base/yolo_anchorbase_radar/data/: armor-2.yaml  hyp.scratch.tiny.yaml
anchor_base/yolo_anchorbase_radar/models/: basic.py  common.py  experimental.py  yolo.py
anchor_base/yolo_anchorbase_radar/models/Models/: BOT.py  COT.py  ConvNext_v2.py  HorNet.py  RepVGG.py  SwinTransformer.py  yolor.py
anchor_base/yolo_anchorbase_radar/utils/: datasets.py  general.py  loss.py  plots.py  torch_utils.py
anchor_free/C++_inference_TensorRT_radar/: CMakeLists.txt  README.md  demo_radar.cpp  yolov8_radar.cu  yolov8_radar.h
anchor_free/C++_inference_TensorRT_radar/Demo DaHeng Camera/: CMakeLists.txt
anchor_free/C++_inference_TensorRT_radar/Demo DaHeng Camera/include/: CamWrapper.h  CamWrapperDH.h  DH_CAM.h  GxIAPI.h  yolov8_radar.h
anchor_free/C++_inference_TensorRT_radar/Demo DaHeng Camera/src/: CamWrapper.cpp  DH_CAM.cpp  camera.yaml  yolov8_radar.cpp  yolov8_radar.cu
anchor_free/C++_inference_TensorRT_radar/include/: depth_radar.h  yolov8_radar.h
anchor_free/C++_inference_TensorRT_radar/src/: demo_radar.cpp  depth_radar.cpp  yolov8_radar.cpp  yolov8_radar.cu
anchor_free/yolo_anchorfree_radar/: README.md  detect.py  export.py  hubconf.py  requirements.txt  test.py  train.py
anchor_free/yolo_anchorfree_radar/cfg/: yolov7.yaml  yolov8m.yaml  yolov8s.yaml
anchor_free/yolo_anchorfree_radar/cfg/GMaster/: yolov8_4-ConvNextV2-SimAM.yaml  yolov8_4.yaml  yolov8_4_C2fHB_COT2f_SimAM.yaml  yolov8_4_C2fHB_SimAM.yaml  yolov8_4_COT2f_SimAM.yaml  yolov8_4_SimAM.yaml  yolov8_4anchor.yaml  yolov8x6.yaml
anchor_free/yolo_anchorfree_radar/cfg/radar/: yolov8_4-ConvNextV2-SimAM.yaml  yolov8_4.yaml  yolov8_4_C2fHB_COT2f_SimAM.yaml  yolov8_4_C2fHB_SimAM.yaml  yolov8_4_COT2f_SimAM.yaml  yolov8_4_SimAM.yaml
anchor_free/yolo_anchorfree_radar/data/: armor-2.yaml  armor-radar.yaml  hyp.scratch.tiny.yaml
anchor_free/yolo_anchorfree_radar/data/radar/: armor-radar.yaml  hyp.radar.yaml
anchor_free/yolo_anchorfree_radar/models/: common.py  experimental.py  yolo.py
anchor_free/yolo_anchorfree_radar/models/Models/: COT.py  ConvNext.py  ConvNext_v2.py  HorNet.py  mobileone.py
anchor_free/yolo_anchorfree_radar/pre-processing_script/: change_label.py  change_name.py  label_show.py  split_dataset.py
anchor_free/yolo_anchorfree_radar/utils/: activations.py  callbacks.py  datasets.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
anchor_free/yolo_anchorfree_radar/utils/aws/: resume.py
